add task list and file name display support

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "highlight.js": "^9.13.0",
     "log4js": "^3.0.6",
     "markdown-it": "^8.4.2",
+    "markdown-it-emoji": "^1.4.0",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-plantuml": "^1.3.0",
+    "markdown-it-task-lists": "^2.1.1",
     "neovim": "^4.2.1",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
