--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "watch": "tsc -w -p ./",
     "build-app": "cd app && rm -rf ./.next && next build && next export",
-    "build": "tsc -p ./ && cd app && rm -rf ./.next && next build && next export && yarn && pkg --out-path ./bin . && rm -rf ./node_modules yarn.lock ./.next"
+    "build": "tsc -p ./ && cd app && rm -rf ./.next && next build && next export && yarn && pkg --targets node10-linux-x64,node10-macos-x64,node10-win-x64 --out-path ./bin . && rm -rf ./node_modules yarn.lock ./.next"
   },
   "dependencies": {
     "chart.js": "^2.7.3",
