add preload app
separate app

fix app enter point

update build

add vim-node-rpc integration

add vim support

update build

fix server start

fix vim server start

update README and version to 0.0.7

update fetch pre build logical

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
+    "resolveJsonModule": true,
     "composite": true,
     "target": "es2015",
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "lib": [
+      "dom",
       "esnext"
     ],
     "baseUrl": ".",
