--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-chart": "^0.2.0",
     "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.1",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-plantuml": "^1.3.0",
     "markdown-it-task-lists": "^2.1.1",
