--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "katex": "^0.10.1",
     "log4js": "^3.0.6",
     "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.2.4",
     "markdown-it-chart": "^0.2.0",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-footnote": "^3.0.1",
-    "markdown-it-github-headings": "^1.1.1",
     "markdown-it-plantuml": "^1.3.0",
     "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-toc-done-right": "^4.0.1",
     "md-it-meta": "^0.0.2",
     "neovim": "^4.2.1",
     "next": "^7.0.2",
