--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "msgpack-lite": "^0.1.26"
   },
   "devDependencies": {
     "@types/node": "^10.11.7",
