feat(neovim): using new neovim version

--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,8 @@
   "private": true,
   "dependencies": {
     "log4js": "3.0.6",
-    "neovim": "4.2.1",
+    "@chemzqm/neovim": "^5.7.9",
     "socket.io": "2.1.1",
-    "tslib": "1.9.3",
-    "vim-node-rpc": "0.1.24"
+    "tslib": "1.9.3"
   }
 }
