--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -p ./ && cd app && rm -rf ./.next && next build && next export && yarn && pkg --targets node10-linux-x64,node10-macos-x64,node10-win-x64 --out-path ./bin . && rm -rf ./node_modules ./.next"
   },
   "dependencies": {
+    "@chemzqm/neovim": "^5.7.9",
     "chart.js": "^2.7.3",
     "highlight.js": "^9.13.0",
     "log4js": "^3.0.6",
@@ -25,14 +26,13 @@
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-toc-done-right": "^4.0.1",
     "md-it-meta": "^0.0.2",
-    "neovim": "^4.2.1",
+    "msgpack-lite": "^0.1.26",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "msgpack-lite": "^0.1.26"
+    "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^10.11.7",
