--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "markdown-preview-vim",
+  "name": "markdown-preview",
   "version": "0.0.1",
   "description": "markdown preview plugin for (neo)vim",
   "bin": "./index.js",
-  "repository": "https://github.com/iamcco/markdown-preview.vim.git",
+  "repository": "https://github.com/iamcco/markdown-preview.nvim.git",
   "author": "年糕小豆汤 <ooiss@qq.com>",
   "license": "MIT",
   "private": true,
