--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "markdown-preview-vim",
-  "version": "0.0.9",
+  "name": "markdown-preview",
+  "version": "0.0.10",
   "description": "markdown preview plugin for (neo)vim",
   "bin": "./app/server.js",
-  "repository": "https://github.com/iamcco/markdown-preview.vim.git",
+  "repository": "https://github.com/iamcco/markdown-preview.nvim.git",
   "author": "年糕小豆汤 <ooiss@qq.com>",
   "license": "MIT",
   "private": true,
@@ -11,7 +11,7 @@
     "watch": "tsc -w -p ./",
     "build-app": "cd app && rm -rf ./.next && next build && next export",
     "build-lib": "tsc -p ./",
-    "build": "tsc -p ./ && cd app && rm -rf ./.next && next build && next export && yarn && pkg --targets node10-linux-x64,node10-macos-x64,node10-win-x64 --out-path ./bin . && rm -rf ./node_modules ./.next"
+    "build": "tsc -p ./ && cd app && rm -rf ./.next && next build && next export && yarn && pkg --targets node16-linux-x64,node16-macos-x64,node16-win-x64 --out-path ./bin . && rm -rf ./node_modules ./.next"
   },
   "dependencies": {
     "@chemzqm/neovim": "^5.7.9",
@@ -20,6 +20,7 @@
     "log4js": "^3.0.6",
     "markdown-it": "^9.0.1",
     "markdown-it-anchor": "^5.2.4",
+    "markdown-it-deflist": "^2.0.3",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-plantuml": "^1.3.0",
@@ -35,14 +36,13 @@
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
-    "@types/node": "^10.11.7",
-    "markdown-it-deflist": "^2.0.3",
-    "pkg": "^4.4.9",
-    "prettier": "^1.14.3",
-    "tslint": "^5.17.0",
+    "@types/node": "16",
+    "pkg": "^5.6.0",
+    "prettier": "^2.6.2",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.1.3",
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^4.6.4",
     "yuuko-tsconfig": "^1.0.0"
   }
 }
