--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "markdown-it-deflist": "^2.0.3",
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-footnote": "^3.0.1",
-    "markdown-it-plantuml": "^1.3.0",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-toc-done-right": "^4.0.1",
     "md-it-meta": "^0.0.2",
     "msgpack-lite": "^0.1.26",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
+    "plantuml-encoder": "^1.4.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "socket.io": "^2.1.1",
