--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   },
   "dependencies": {
     "@chemzqm/neovim": "^5.7.9",
+    "@types/markdown-it": "^12.2.3",
     "chart.js": "^2.7.3",
     "highlight.js": "^10.4.1",
     "log4js": "^6.4.0",
-    "markdown-it": "^12.3.2",
-    "markdown-it-anchor": "^5.2.4",
-    "markdown-it-deflist": "^2.0.3",
-    "markdown-it-emoji": "^1.4.0",
-    "markdown-it-footnote": "^3.0.1",
+    "markdown-it": "^13.0.1",
+    "markdown-it-anchor": "^8.6.7",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-footnote": "^3.0.3",
     "markdown-it-task-lists": "^2.1.1",
-    "markdown-it-toc-done-right": "^4.0.1",
+    "markdown-it-toc-done-right": "^4.2.0",
     "md-it-meta": "^0.0.2",
     "msgpack-lite": "^0.1.26",
     "next": "^7.0.2",
