--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@chemzqm/neovim": "^5.7.9",
     "@types/markdown-it": "^12.2.3",
     "chart.js": "^2.7.3",
+    "github-slugger": "^2.0.0",
     "highlight.js": "^10.4.1",
     "log4js": "^6.4.0",
     "markdown-it": "^13.0.1",
@@ -28,11 +29,10 @@
     "markdown-it-toc-done-right": "^4.2.0",
     "md-it-meta": "^0.0.2",
     "msgpack-lite": "^0.1.26",
-    "next": "^7.0.2",
-    "next-routes": "^1.4.2",
+    "next": "^12.3.4",
     "plantuml-encoder": "^1.4.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
